# gradient-color-palette

./: LICENSE  README.md  config.py  main.py  pyproject.toml
